added anilist features

--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,2 @@
-.env
-# Python
-__pycache__/
-*.py[cod]
-*.pyo
-*.pyd
-*.pyc
-*.pyo
-*.pyd
-.Python
-env/
-venv/
-ENV/
-VENV/
-.venv/
-pip-log.txt
-pip-delete-this-directory.txt
-# VSCode
-.vscode/
-# Jupyter
-.ipynb_checkpoints/
-# mypy
-.mypy_cache/
-# pytest
-.pytest_cache/
-# coverage
-htmlcov/
-.coverage
-.cache
-# pyinstaller
-dist/
-build/
-*.spec
-# local env files
-*.env
-.env.*
+# Created by venv; see https://docs.python.org/3/library/venv.html
+*
